tests/functional/lang/eval-fail-concatMap-1.err.exp
error:
       … while calling the 'concatMap' builtin
         at /pwd/lang/eval-fail-concatMap-1.nix:1:1:
            1| builtins.concatMap 1 "foo"
             | ^
            2|

       … while evaluating the first argument passed to builtins.concatMap

       error: expected a function but found an integer: 1
